[gd_scene load_steps=7 format=1]

[ext_resource path="res://Scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://Scripts/PlayerControl.gd" type="Script" id=2]
[ext_resource path="res://Scripts/PlayerInput.gd" type="Script" id=3]
[ext_resource path="res://Scripts/PlayerGraphics.gd" type="Script" id=4]
[ext_resource path="res://Textures/player.png" type="Texture" id=5]

[sub_resource type="CapsuleShape2D" id=1]

custom_solver_bias = 0.0
radius = 11.0
height = 10.0

[node name="Player" type="KinematicBody2D"]

input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( -4.37114e-08, -1, 1, -4.37114e-08, 0, 0 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
collision/margin = 0.08
script/script = ExtResource( 1 )

[node name="PlayerCamera" type="Camera2D" parent="."]

anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit/left = -10000000
limit/top = -10000000
limit/right = 10000000
limit/bottom = 10000000
drag_margin/h_enabled = false
drag_margin/v_enabled = false
smoothing/enable = false
smoothing/speed = 0.0
drag_margin/left = 0.0
drag_margin/top = 0.0
drag_margin/right = 0.0
drag_margin/bottom = 0.0

[node name="PlayerControl" type="Node" parent="."]

script/script = ExtResource( 2 )

[node name="PlayerInput" type="Node" parent="."]

script/script = ExtResource( 3 )

[node name="PlayerGraphics" type="Node" parent="."]

script/script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]

texture = ExtResource( 5 )

[node name="ParticlesForward" type="Particles2D" parent="."]

visibility/behind_parent = true
transform/pos = Vector2( 0, 7 )
config/amount = 8
config/lifetime = 1.0
config/time_scale = 2.0
config/emitting = false
config/process_mode = 1
config/local_space = false
params/direction = 0.0
params/spread = 15.0
params/linear_velocity = 20.0
params/spin_velocity = 0.0
params/orbit_velocity = 0.0
params/gravity_direction = 0.0
params/gravity_strength = 0.0
params/radial_accel = 0.0
params/tangential_accel = 0.0
params/damping = 0.0
params/initial_angle = 0.0
params/initial_size = 3.0
params/final_size = 1.0
params/hue_variation = 0.0
params/anim_speed_scale = 1.0
params/anim_initial_pos = 0.0
color/color = Color( 0.894118, 0.231373, 0.266667, 1 )

[node name="ParticlesBack" type="Particles2D" parent="."]

visibility/behind_parent = true
transform/pos = Vector2( 0, -10 )
config/amount = 8
config/lifetime = 1.0
config/time_scale = 2.0
config/emitting = false
config/process_mode = 1
config/local_space = false
params/direction = 180.0
params/spread = 15.0
params/linear_velocity = 20.0
params/spin_velocity = 0.0
params/orbit_velocity = 0.0
params/gravity_direction = 0.0
params/gravity_strength = 0.0
params/radial_accel = 0.0
params/tangential_accel = 0.0
params/damping = 0.0
params/initial_angle = 0.0
params/initial_size = 3.0
params/final_size = 1.0
params/hue_variation = 0.0
params/anim_speed_scale = 1.0
params/anim_initial_pos = 0.0
color/color = Color( 0.894118, 0.231373, 0.266667, 1 )

[node name="PlayerCollisions" type="CollisionShape2D" parent="."]

transform/rot = 90.0
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0


